Fixed HTTPS redirect, added search display options to search page, fixed bug with saved jobs not showing on page load, made wayer blue

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -855,6 +855,20 @@ footer {
   }
 }
 
+// Sidebar
+#sidebar-permanent {
+  .mdc-tab-bar {
+    background-color: $mdc-theme-primary;
+    width: 100%;
+    .mdc-tab {
+      color: white;
+    }
+    .mdc-tab-bar__indicator {
+      background-color: white;
+    }
+  }
+}
+
 /*=====Tab Bar=====*/
 
 .mdc-tab-bar__left {
